# Jdltrade

./: .env.example  .gitignore  Dockerfile  Jdltrade_Analysis_Report.md  LAUNCH_GUIDE.md  README.md  config.yaml  docker-compose.yml  main.py  nano_builder.sh  requirements.txt  run.sh  setup.sh
agent/: __init__.py  config.py  core.py  prompts.py  tools.py
contracts/: NexusFlashReceiver.sol
contracts/interfaces/: IAaveV3Pool.sol  IBalancerVault.sol  ICurvePool.sol  IUniswapV3Router.sol
dl_sovereign/: .env.example  .gitignore  Cargo.toml  setup.sh
dl_sovereign/contracts/: SovereignArb.sol
dl_sovereign/src/: main.rs
dl_sovereign/src/engine/: compiler.rs
dl_sovereign/src/math/: advanced.rs  graph.rs  mod.rs
hardhat/: hardhat.config.js  package.json
hardhat/test/: NexusFlashReceiver.test.js
nexus_arb/: __init__.py  execution_router.py  flash_loan_executor.py  liquidity_monitor.py  market_data.py  orchestrator.py  risk_manager.py  tx_monitor.py  vault.py  web3_manager.py
nexus_arb/algorithms/: __init__.py  bellman_ford.py  cma_es.py  ppo.py  thompson_sampling.py  ukf.py
nexus_core/: Cargo.toml
nexus_core/src/: bellman_ford.rs  lib.rs  matrix_ops.rs  price_utils.rs
scripts/: deploy.py  validate_mainnet.py
tests/: test_algorithms.py
