[package]
name = "nexus_core"
version = "2.0.0"
edition = "2021"
description = "High-performance Rust core for NEXUS-ARB arbitrage engine"
license = "MIT"

[lib]
name = "nexus_core"
crate-type = ["cdylib"]   # Required for PyO3 extension

[dependencies]
pyo3       = { version = "0.21", features = ["extension-module"] }
numpy      = "0.21"
rayon      = "1.9"           # Parallel iteration
ordered-float = "4.2"        # f64 with Ord (for BinaryHeap)
dashmap    = "5.5"           # Lock-free concurrent HashMap
parking_lot = "0.12"         # Fast Mutex/RwLock
smallvec   = "1.13"          # Stack-allocated small vectors
ahash      = "0.8"           # Fast non-crypto hash

[profile.release]
opt-level     = 3
lto           = "fat"        # Link-time optimisation
codegen-units = 1            # Single codegen unit for max optimisation
panic         = "abort"      # Remove panic unwinding overhead
